# slinky-avs-contracts

./: Cargo.toml  NOTICE
contracts/aggregators/light-client/: Cargo.toml  README.md
contracts/aggregators/light-client/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/fast-transfer/: Cargo.toml  README.md
contracts/fast-transfer/src/: contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  merkle.rs  msg.rs  query.rs  state.rs
scripts/: deploy.py  requirements.txt
scripts/configs/: neutron.toml
src/: contract.rs
