[workspace]
resolver = "2"
members  = [
    "contracts/aggregators/light-client",
    "contracts/fast-transfer"
]

[workspace.package]
name = "slinky-avs-contracts"
version = "0.1.0"
authors = ["Eric <eric.warehime@gmail.com>"]
edition = "2021"


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


[workspace.dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std    = { version = "1.5.0", features = [
    "cosmwasm_1_3",
    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
    # "cosmwasm_1_4",
] }
cw-storage-plus = "1.1.0"
cw2             = "1.1.1"
schemars        = "0.8.15"
serde           = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror       = { version = "1.0.49" }
cw-multi-test   = "0.17.0"
rs_merkle       = "1.4.2"
tiny-keccak     = { version = "2.0.2", features = ["keccak"] }
